--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family: din-2014, zen-old-mincho, system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
@@ -8,4 +12,24 @@ code {
   font-family: source-han-sans-japanese, system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+@layer base {
+  * {
+    color: @apply text-brand-text;
+  }
+}
+
+@layer components {
+  .link-hover {
+    @apply transition-colors duration-150;
+    @apply group-hover:text-brand-red-dark group-hover:underline;
+    text-decoration-style: dashed;
+  }
+  .link-hover:hover {
+    @apply text-brand-red-dark underline;
+  }
+  .underline-dashed {
+    text-decoration-style: dashed;
+  }
 }
