--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 body {
-  font-family: din-2014, zen-old-mincho, system-ui, -apple-system,
+  
+  font-family: din-2014, toppan-bunkyu-gothic-pr6n, source-han-sans-japanese , system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
 }
