--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -2,8 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  
+* {
   font-family: din-2014, toppan-bunkyu-gothic-pr6n, source-han-sans-japanese , system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
