--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -2,17 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  font-family: din-2014, toppan-bunkyu-gothic-pr6n, source-han-sans-japanese , system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-pre,code {
-  font-family: source-han-sans-japanese, system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
-}
 
 :root {
   --color-border-default: #718791 !important;
@@ -37,10 +26,26 @@ pre,code {
   animation: overlay-background 2000ms linear infinite alternate both;
 }
 
+* {
+  font-family: din-2014, toppan-bunkyu-gothic-pr6n, source-han-sans-japanese , system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
+}
 
+.markdown-body pre,.markdown-body pre * {
+  font-family: source-han-sans-japanese, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.25rem !important;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.125em;
+}
 
 .markdown-body * {
   font-size: 20px;
+  letter-spacing: 0.125em;
+  line-height: 1.25;
 }
 
 .markdown-body p img {
