--- a/src/pages/_BaseHead.astro
+++ b/src/pages/_BaseHead.astro
@@ -1,28 +1,22 @@
 ---
-// Import the global.css file here so that it is included on
-// all pages through the use of the <BaseHead /> component.
-import '../styles/global.css';
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
 interface Props {
-	title: string;
-	description: string;
-	image?: string;
+  pageTitle?: string;
+  image?: string;
 }
 
+const { pageTitle, image = "/images/ogp.png" } = Astro.props;
+const title = pageTitle ? `${pageTitle} | ${SITE_TITLE}` : SITE_TITLE;
+const description = SITE_DESCRIPTION;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 <meta name="generator" content={Astro.generator} />
-
-<!-- Font preloads -->
-<link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
@@ -45,3 +39,6 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- Adobe Fonts -->
+<link rel="stylesheet" href="https://use.typekit.net/kev1txv.css" />
