--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,55 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { getCollection } from "astro:content";
+import dayjs from "dayjs";
+import { PostType } from "../lib/rss-model";
+import BaseHead from "./_BaseHead.astro";
+import PostListItem from "./_PostListItem.astro";
+import RootLayout from "./_RootLayout.astro";
+
+import {
+  parseURL,
+  parseFeedItems,
+  type Post as PostData,
+} from "../lib/rss-utils";
+
+const posts = await getCollection("posts");
+const markdownPosts: PostData[] = posts.map((post) => {
+  return {
+    title: post.data.title,
+    link: `/posts/${post.id}`,
+    publishDate: post.data.date,
+    description: "",
+    thumbnailImage: post.data.eyecatch,
+    postType: PostType.MarkdownPost,
+    tags: post.data.tags ?? [],
+  };
+});
+
+const [zennRSS, noteRSS, qiitaRSS] = await Promise.all([
+  parseURL("https://zenn.dev/junseinagao/feed"),
+  parseURL("https://note.com/junsei_nagao/rss"),
+  parseURL("https://qiita.com/junseinagao/feed"),
+]);
+
+const zennItems = zennRSS ? parseFeedItems(zennRSS, PostType.Zenn) : [];
+const noteItems = noteRSS ? parseFeedItems(noteRSS, PostType.Note) : [];
+const qiitaItems = qiitaRSS ? parseFeedItems(qiitaRSS, PostType.Qiita) : [];
+
+const allPosts = [
+  ...markdownPosts,
+  ...zennItems,
+  ...noteItems,
+  ...qiitaItems,
+].sort((a, b) => (dayjs(a.publishDate).isAfter(dayjs(b.publishDate)) ? -1 : 1));
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
-</html>
+<RootLayout>
+  <Fragment slot="head">
+    <BaseHead />
+  </Fragment>
+  <section>
+    <ul class="flex flex-col gap-8 px-4">
+      {allPosts.map((post) => <PostListItem {...post} />)}
+    </ul>
+  </section>
+</RootLayout>
