--- a/src/pages/_BaseHead.astro
+++ b/src/pages/_BaseHead.astro
@@ -42,3 +42,34 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 <!-- Adobe Fonts -->
 <link rel="stylesheet" href="https://use.typekit.net/kev1txv.css" />
+<script is:inline>
+  (function (d) {
+    var config = {
+        kitId: "eve8byh",
+        scriptTimeout: 3000,
+        async: true,
+      },
+      h = d.documentElement,
+      t = setTimeout(function () {
+        h.className =
+          h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+      }, config.scriptTimeout),
+      tk = d.createElement("script"),
+      f = false,
+      s = d.getElementsByTagName("script")[0],
+      a;
+    h.className += " wf-loading";
+    tk.src = "https://use.typekit.net/" + config.kitId + ".js";
+    tk.async = true;
+    tk.onload = tk.onreadystatechange = function () {
+      a = this.readyState;
+      if (f || (a && a != "complete" && a != "loaded")) return;
+      f = true;
+      clearTimeout(t);
+      try {
+        Typekit.load(config);
+      } catch (e) {}
+    };
+    s.parentNode.insertBefore(tk, s);
+  })(document);
+</script>
