--- a/src/pages/me.astro
+++ b/src/pages/me.astro
@@ -31,6 +31,7 @@ const { Content: BusinessProfileContent } = await render(businessProfile);
     </section>
     <section
       class="border-2 border-dashed border-brand-sub p-4 lg:w-1/2 lg:flex-1 lg:h-fit"
+      id="business-profile-section"
     >
       <div class="markdown-body grid grid-cols-1 gap-y-6 text-2xl">
         <BusinessProfileContent />
