--- a/src/pages/_RootLayout.astro
+++ b/src/pages/_RootLayout.astro
@@ -29,21 +29,21 @@ import "../styles/markdown.css";
           text.junseinagao.com
         </a>
       </div>
-      <nav
-        class="flex justify-center min-h-20 items-center border-t border-b border-solid border-brand-sub py-4"
-      >
-        <ul
-          class="grid list-none gap-x-5 text-2xl grid-cols-2 grid-rows-1 text-center text-brand-text"
-        >
-          <li>
-            <a href="/" class="link-hover">All Articles</a>
-          </li>
-          <li>
-            <a href="/me" class="link-hover">About</a>
-          </li>
-        </ul>
-      </nav>
     </header>
+    <nav
+      class="flex justify-center min-h-20 items-center border-t border-b border-solid border-brand-sub py-4 sticky top-0 z-50 bg-[#e7ebdf] bg-opacity-90"
+    >
+      <ul
+        class="grid list-none gap-x-5 text-2xl grid-cols-2 grid-rows-1 text-center text-brand-text"
+      >
+        <li>
+          <a href="/" class="link-hover">All Articles</a>
+        </li>
+        <li>
+          <a href="/me" class="link-hover">About</a>
+        </li>
+      </ul>
+    </nav>
 
     <main
       class="container mx-auto flex flex-col items-center py-10 px-2 md:px-4"
@@ -51,9 +51,12 @@ import "../styles/markdown.css";
       <slot />
     </main>
     <footer
-      class="flex items-center justify-center bg-brand-base-accent py-4 text-brand-text"
+      class="flex items-center justify-center bg-brand-base-accent py-4 flex-col"
     >
-      © 2022-2025 Junsei Nagao. All rights reserved.
+      <span class="text-brand-text"
+        >© 2022-2025 Junsei Nagao. All rights reserved.</span
+      >
+      <a href="/me#business-profile-section">Contact me</a>
     </footer>
   </body>
 </html>
