--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -40,6 +40,31 @@
   text-decoration-style: dashed;
 }
 
+.markdown-body p code {
+  background-color: #24292ed0;
+  color: #e1e4e8;
+  padding: 0.2rem 0.3rem;
+  position: relative;
+  bottom: 3px;
+  margin: 0 0.2rem;
+  font-family:
+    source-han-sans-japanese,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  font-size: 0.75rem !important;
+  font-weight: 500;
+  letter-spacing: 0.1em !important;
+}
+
 .markdown-body pre {
   padding: 1rem;
 }
