--- a/src/pages/_BaseHead.astro
+++ b/src/pages/_BaseHead.astro
@@ -23,6 +23,8 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
+<!-- Sitemap -->
+<link rel="sitemap" href="/sitemap-index.xml" />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
