--- a/src/pages/posts/[slug]/index.astro
+++ b/src/pages/posts/[slug]/index.astro
@@ -42,7 +42,7 @@ const description = removeMarkdown(post.body!, {
     <BreadcrumbJsonLd title={post.data.title} slug={post.id} />
   </Fragment>
   <div
-    class="container mx-auto mb-10 transition-opacity duration-300 xl:max-w-3xl 2xl:max-w-3xl aspect-[1200/630] relative"
+    class="container mx-auto mb-10 transition-opacity duration-300 xl:max-w-3xl 2xl:max-w-3xl aspect-1200/630 relative"
   >
     <img
       src={post.data.eyecatch ?? "/images/ogp.png"}
